@@ -1,0 +1,2 @@
+points  Demonstration of Basic Usage
+mask    Demonstration of clipping mask, automatic and manual
